--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <table border="1">
+    <table border="1" width="500px">
 		<tr>
 			<th>Part</th>
 			<th>XS</th>
