--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
     <table border="1" width="500px">
+		<thead>
 		<tr>
 			<th>Part</th>
 			<th>XS</th>
@@ -17,6 +18,8 @@
 			<th>L</th>
 			<th>XL</th>
 		</tr>
+	  </thead>
+	<tbody>
 		<tr>
 			<th>Waist</th>
 			<td>25</td>
@@ -41,14 +44,9 @@
 			<td>25</td>
 			<td>25</td>
 		</tr>
+	</tbody>
 	</table>
-
-
-
-
-
-	
-    <script type="text/javascript" src="./script.js">
+<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
