--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
 			<td>32</td>
 		</tr>
 		<tr>
-			<th>Chest</th>
+			<td>Chest</td>
 			<td>34</td>
 			<td>34</td>
 			<td>38</td>
@@ -37,7 +37,7 @@
 			<td>41</td>
 		</tr>
 		<tr>
-			<th>Sleeve</th>
+			<td>Sleeve</td>
 			<td>23</td>
 			<td>24</td>
 			<td>24</td>
